--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,4 @@ jobs:
         run: pnpm build
 
       - name: Run integration tests
-        run: bash scripts/integration-test.sh
+        run: pnpm test:integration
