--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "description": "AI Skills Package Manager - Git-based skills management for AI agents",
   "type": "module",
-  "packageManager": "pnpm@9",
+  "packageManager": "pnpm@9.15.0",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -70,7 +70,8 @@
     "gray-matter": "^4.0.3",
     "ora": "^8.0.1",
     "semver": "^7.6.3",
-    "tabtab": "^3.0.2"
+    "tabtab": "^3.0.2",
+    "tar-stream": "^3.1.7"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
@@ -79,6 +80,7 @@
     "@types/degit": "^2.8.6",
     "@types/node": "^22.10.0",
     "@types/semver": "^7.5.8",
+    "@types/tar-stream": "^3.1.3",
     "@vitest/coverage-v8": "^2.1.9",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
